# misorepos

./: README.md  app-client.nix  app.cabal  cabal.project  default.nix  docker.nix  flake.nix  hie.yaml  nixpkgs.nix
src/: app.hs  test-gitlab.hs
src/App/: Component.hs  Model.hs
src/Gitlab/: Api.hs  Repo.hs  User.hs
static/: index.html
